# git_scope

./: .diffignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  mint.json  pyproject.toml
.github/: cliff.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  version-control.yml
docs/: README.mdx  pytest-bdd.md
docs/1-project/: overview.mdx  user_stories.mdx
docs/2-planning/: action_plan.mdx  implementation.mdx  roadmap.mdx
docs/3-development/: ai_documentation_guide.mdx  documentation_guide.mdx  guidelines.mdx  release_workflow.mdx  versioning_guide.mdx
docs/4-testing/: bdd_guidelines.mdx
docs/6-examples/: quickstart.md
docs/guides/testing/: bdd.mdx
tests/acceptance/: features.feature
